feat: implementação dos novos endpoints
